--- a/tests/fixtures/tilt_azimuth/ta.ipynb
+++ b/tests/fixtures/tilt_azimuth/ta.ipynb
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "shared-housing",
+   "id": "naval-impact",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "animal-bookmark",
+   "id": "acute-freeware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "emerging-marsh",
+   "id": "ready-jerusalem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "completed-excitement",
+   "id": "internal-carpet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "subjective-broad",
+   "id": "answering-essence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "architectural-headset",
+   "id": "major-beast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "renewable-harvey",
+   "id": "editorial-messenger",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "flexible-brook",
+   "id": "suspected-virginia",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "harmful-reduction",
+   "id": "legislative-philip",
    "metadata": {},
    "outputs": [
     {
@@ -533,84 +533,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "improving-design",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum(est.delta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "earlier-removal",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum(delta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "insured-least",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est.daily_meas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "underlying-society",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "daily_meas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "clear-vaccine",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est.day_of_year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "nuclear-minnesota",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "day_of_year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "white-affiliate",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.min(est.day_of_year == est.day_of_year)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "first-iceland",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/londonoh/Documents/github/pv-system-profiler/pvsystemprofiler/algorithms/angle_of_incidence/curve_fitting.py:25: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  x = np.array([np.deg2rad(delta), np.deg2rad(omega)])\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-01a481f4c0ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m run_curve_fit(func=func_customized, keys=['tilt', 'azimuth'], delta=delta_f, omega=est.omega,\n\u001b[1;32m      2\u001b[0m                                   \u001b[0mcostheta\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mctheta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mboolean_filter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minit_values\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miv\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m                                   fit_bounds=est.fitb)\n\u001b[0m",
+      "\u001b[0;32m~/Documents/github/pv-system-profiler/pvsystemprofiler/algorithms/angle_of_incidence/curve_fitting.py\u001b[0m in \u001b[0;36mrun_curve_fit\u001b[0;34m(func, keys, delta, omega, costheta, boolean_filter, init_values, fit_bounds)\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeg2rad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdelta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeg2rad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0momega\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0mpopt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpcov\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurve_fit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcostheta_fit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeg2rad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minit_values\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfit_bounds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m'azimuth_estimate'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/pvi-user/lib/python3.7/site-packages/scipy/optimize/minpack.py\u001b[0m in \u001b[0;36mcurve_fit\u001b[0;34m(f, xdata, ydata, p0, sigma, absolute_sigma, check_finite, bounds, method, jac, **kwargs)\u001b[0m\n\u001b[1;32m    740\u001b[0m         \u001b[0;31m# non-array_like `xdata`.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    741\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 742\u001b[0;31m             \u001b[0mxdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray_chkfinite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    743\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    744\u001b[0m             \u001b[0mxdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/pvi-user/lib/python3.7/site-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36masarray_chkfinite\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    481\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    482\u001b[0m     \"\"\"\n\u001b[0;32m--> 483\u001b[0;31m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    484\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchar\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtypecodes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'AllFloat'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misfinite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    485\u001b[0m         raise ValueError(\n",
+      "\u001b[0;32m~/miniconda3/envs/pvi-user/lib/python3.7/site-packages/numpy/core/_asarray.py\u001b[0m in \u001b[0;36masarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m     \"\"\"\n\u001b[0;32m---> 83\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
+     ]
+    }
+   ],
    "source": [
     "run_curve_fit(func=func_customized, keys=['tilt', 'azimuth'], delta=delta_f, omega=est.omega,\n",
     "                                  costheta=est.ctheta, boolean_filter=est.bf, init_values=est.iv,\n",
     "                                  fit_bounds=est.fitb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "pleasant-deputy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3480"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(est.bf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "necessary-intervention",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9916"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(boolean_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "southeast-drawing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6627.35137762615"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(delta)"
    ]
   },
   {
@@ -636,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "declared-heath",
+   "id": "growing-season",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "african-italian",
+   "id": "dutch-hearts",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "limited-cooperative",
+   "id": "moved-vertex",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vanilla-camera",
+   "id": "physical-basics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "underlying-europe",
+   "id": "demonstrated-newman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "capable-toilet",
+   "id": "subsequent-indication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aquatic-intent",
+   "id": "acoustic-poultry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heard-stranger",
+   "id": "popular-intermediate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "innovative-adoption",
+   "id": "bigger-illinois",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "junior-offering",
+   "id": "annoying-backing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agreed-fleet",
+   "id": "fancy-variance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sufficient-passport",
+   "id": "increased-spoke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "golden-beginning",
+   "id": "regular-genetics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "innovative-overview",
+   "id": "capable-cornwall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "applicable-inventory",
+   "id": "renewable-assistant",
    "metadata": {},
    "outputs": [],
    "source": []
