added comments to notebook

--- a/tests/fixtures/tilt_azimuth/ta.ipynb
+++ b/tests/fixtures/tilt_azimuth/ta.ipynb
@@ -60,6 +60,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "wireless-lotus",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latitude = 39.4856\n",
+    "longitude = -76.6636\n",
+    "tilt = 180\n",
+    "azimuth = 20\n",
+    "gmt_offset = -5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "7a35db8d",
    "metadata": {},
@@ -190,6 +204,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "curious-special",
+   "metadata": {},
+   "source": [
+    "## calculate cosine of alngle of incidence"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "animated-import",
@@ -211,22 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "focused-mission",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pvsystemprofiler.algorithms.tilt_azimuth.daytime_threshold_quantile import filter_data"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "id": "authentic-cover",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pvsystemprofiler.algorithms.latitude.hours_daylight import calculate_hours_daylight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "unauthorized-survey",
+   "metadata": {},
+   "source": [
+    "## Find hours daylight"
    ]
   },
   {
@@ -270,13 +290,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "impressed-frontier",
+   "metadata": {},
+   "source": [
+    "## Calculate boolean filter"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "simplified-external",
+   "execution_count": 14,
+   "id": "focused-mission",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hours_daylight = calculate_hours_daylight(dh.filled_data_matrix, threshold=daytime_threshold)"
+    "from pvsystemprofiler.algorithms.tilt_azimuth.daytime_threshold_quantile import filter_data"
    ]
   },
   {
@@ -310,27 +338,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "wireless-lotus",
+   "cell_type": "markdown",
+   "id": "regulation-peace",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "latitude = 39.4856\n",
-    "longitude = -76.6636\n",
-    "tilt = 180\n",
-    "azimuth = 20\n",
-    "gmt_offset = -5"
+    "## Calculate hour angle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "compact-elephant",
    "metadata": {},
    "outputs": [],
    "source": [
     "omega = calculate_omega(dh.data_sampling, dh.num_days, longitude, day_of_year, gmt_offset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "entitled-story",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "omega_f = omega[boolean_filter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "generic-bikini",
+   "metadata": {},
+   "source": [
+    "## Calculate declination"
    ]
   },
   {
@@ -364,13 +404,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "entitled-story",
+   "cell_type": "markdown",
+   "id": "auburn-liverpool",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "omega_f = omega[boolean_filter]"
+    "## Estimate tilt and azimuth using run_curve_fit directly"
    ]
   },
   {
@@ -434,6 +472,14 @@
    ],
    "source": [
     "estimates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "flexible-capture",
+   "metadata": {},
+   "source": [
+    "## Estimate tilt and azimuth using the ConfigurationEstimator class"
    ]
   },
   {
