--- a/tests/fixtures/tilt_azimuth/tilt_azimuth_estimation_data_creator.ipynb
+++ b/tests/fixtures/tilt_azimuth/tilt_azimuth_estimation_data_creator.ipynb
@@ -67,8 +67,8 @@
    "source": [
     "latitude = 39.4856\n",
     "longitude = -76.6636\n",
-    "tilt = 180\n",
-    "azimuth = 20\n",
+    "tilt = 20\n",
+    "azimuth = 180\n",
     "gmt_offset = -5"
    ]
   },
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 26.1 seconds       \n",
+      "CAUTION: Multiple scan rates detected!=======================] 100.0% ...queries complete in 31.0 seconds       \n",
       "Scan rates (in seconds): [300, 280]\n",
       "0 transitions detected.\n",
       "Suggest splitting data set between:\n",
@@ -134,16 +134,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total time: 6.39 seconds\n",
+      "total time: 6.41 seconds\n",
       "--------------------------------\n",
       "Breakdown\n",
       "--------------------------------\n",
-      "Preprocessing              2.07s\n",
-      "Cleaning                   0.10s\n",
-      "Filtering/Summarizing      4.22s\n",
+      "Preprocessing              2.17s\n",
+      "Cleaning                   0.11s\n",
+      "Filtering/Summarizing      4.13s\n",
       "    Data quality           0.14s\n",
-      "    Clear day detect       0.11s\n",
-      "    Clipping detect        3.46s\n",
+      "    Clear day detect       0.12s\n",
+      "    Clipping detect        3.37s\n",
       "    Capacity change detect 0.51s\n",
       "\n"
      ]
@@ -206,18 +206,18 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ae83fb9d",
+   "id": "c55c4c36",
    "metadata": {},
    "outputs": [],
    "source": [
     "# exporting inputs for tilt and azimuth estimation\n",
     "#day_of_year\n",
-    "np.savetxt('./tests/fixtures/tilt_azimuth/day_of_year.csv', day_of_year,  delimiter=\",\")\n",
+    "#np.savetxt('./tests/fixtures/tilt_azimuth/day_of_year.csv', day_of_year,  delimiter=\",\")\n",
     "# days\n",
-    "np.savetxt('./tests/fixtures/tilt_azimuth/days.csv', days,  delimiter=\",\")\n",
+    "#np.savetxt('./tests/fixtures/tilt_azimuth/days.csv', days,  delimiter=\",\")\n",
     "#day range\n",
     "# days\n",
-    "np.savetxt('./tests/fixtures/tilt_azimuth/day_range.csv', day_range,  delimiter=\",\")"
+    "#np.savetxt('./tests/fixtures/tilt_azimuth/day_range.csv', day_range,  delimiter=\",\")"
    ]
   },
   {
@@ -250,8 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bdba224f",
+   "execution_count": 16,
+   "id": "b00169d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "authentic-cover",
    "metadata": {},
    "outputs": [],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "acute-freeware",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "ready-jerusalem",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "internal-carpet",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "answering-essence",
    "metadata": {},
    "outputs": [],
@@ -320,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "d0bfc205",
+   "execution_count": 22,
+   "id": "f733b887",
    "metadata": {},
    "outputs": [],
    "source": [
     "# exporting inputs for tilt and azimuth estimation\n",
     "# hours_daylight\n",
-    "np.savetxt('./tests/fixtures/tilt_azimuth/hours_daylight.csv', hours_daylight,  delimiter=\",\")"
+    "#np.savetxt('./tests/fixtures/tilt_azimuth/hours_daylight.csv', hours_daylight,  delimiter=\",\")"
    ]
   },
   {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "focused-mission",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "starting-posting",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "major-beast",
    "metadata": {},
    "outputs": [],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "cutting-vegetarian",
    "metadata": {},
    "outputs": [],
@@ -380,8 +380,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "fd6cdb29",
+   "execution_count": 27,
+   "id": "96097e6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "compact-elephant",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "entitled-story",
    "metadata": {},
    "outputs": [],
@@ -420,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "ad112d7a",
+   "execution_count": 30,
+   "id": "dddbfe01",
    "metadata": {},
    "outputs": [],
    "source": [
     "# exporting inputs for tilt and azimuth estimation\n",
     "# omega_f\n",
-    "np.savetxt('./tests/fixtures/tilt_azimuth/hour_angle.csv', omega_f,  delimiter=\",\")"
+    "np.savetxt('./tests/fixtures/tilt_azimuth/omega_f.csv', omega_f,  delimiter=\",\")"
    ]
   },
   {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "protective-cinema",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "enhanced-nature",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "flexible-aberdeen",
    "metadata": {},
    "outputs": [],
@@ -470,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "5d8e0979",
+   "execution_count": 34,
+   "id": "6d793a41",
    "metadata": {},
    "outputs": [],
    "source": [
     "# exporting inputs for tilt and azimuth estimation\n",
     "# delta_f\n",
-    "np.savetxt('./tests/fixtures/tilt_azimuth/declination.csv', omega_f,  delimiter=\",\")"
+    "np.savetxt('./tests/fixtures/tilt_azimuth/delta_f.csv', delta_f,  delimiter=\",\")"
    ]
   },
   {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "nominated-marketing",
    "metadata": {},
    "outputs": [],
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "timely-manufacturer",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "irish-hacker",
    "metadata": {},
    "outputs": [],
@@ -520,35 +520,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "double-easter",
    "metadata": {},
    "outputs": [],
    "source": [
     "estimates = run_curve_fit(func=func_customized, keys=['tilt', 'azimuth'], delta=delta_f, omega=omega_f,\n",
-    "                                  costheta=costheta_fit, boolean_filter=boolean_filter, init_values=[30, 16],\n",
+    "                                  costheta=costheta_fit, boolean_filter=boolean_filter, init_values=[30, 30],\n",
     "                                  fit_bounds=bounds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "clear-retention",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([31.73741791,  1.65643289])"
+       "31.73673020741892"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimates"
+    "estimates[0]"
    ]
   },
   {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "young-universe",
    "metadata": {},
    "outputs": [],
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "wrong-separation",
    "metadata": {},
    "outputs": [],
@@ -581,12 +581,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "built-latvia",
    "metadata": {},
    "outputs": [],
    "source": [
     "est.estimate_orientation(longitude=longitude, latitude=latitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3bb3554e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39.4856"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latitude"
    ]
   },
   {
@@ -598,7 +619,7 @@
     {
      "data": {
       "text/plain": [
-       "31.737706525120117"
+       "31.737875015372357"
       ]
      },
      "execution_count": 44,
@@ -619,7 +640,7 @@
     {
      "data": {
       "text/plain": [
-       "1.6564931059542332"
+       "1.6564838285210939"
       ]
      },
      "execution_count": 45,
